Fix spacing on homepage lede

--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,7 @@ footer .face {
 
 body.home .lede {
   font-size: var(--stepUp2);
+  line-height: 36px;
 }
 
 body.page .lede {
